--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
+							<h1 id="title">Farhad Shokoohi</h1>
 							<p>Hyperspace Engineer</p>
 						</div>
 
@@ -44,9 +44,10 @@
 
 							-->
 							<ul>
-								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
+								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
 								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href="#Research" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Research Portfolio</span></a></li>
+								<li><a href="#Teaching" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Teaching Portfolio</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
