--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Farhad Shokoohi</h1>
-							<p>Hyperspace Engineer</p>
+							<p>Ph.D. in Statistics</p>
 						</div>
 
 					<!-- Nav -->
@@ -46,8 +46,9 @@
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
 								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
-								<li><a href="#Research" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Research Portfolio</span></a></li>
-								<li><a href="#Teaching" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Teaching Portfolio</span></a></li>
+								<li><a href="#Publication" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Publication</span></a></li>
+								<li><a href="#Teaching" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Teaching</span></a></li>
+								<li><a href="#Link" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Link</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -84,18 +85,37 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#About" class="button scrolly">About Me</a>
 							</footer>
 
 						</div>
 					</section>
 
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+					<section id="about" class="three">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>About Me</h2>
+							</header>
+
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+
+							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
+							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
+							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
+							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
+							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
+							ornare iaculis.</p>
+
+						</div>
+					</section>
+					
+					<!-- Portfolio -->
+					<section id="Publication" class="two">
+						<div class="container">
+
+							<header>
+								<h2>Publication</h2>
 							</header>
 
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
@@ -152,24 +172,7 @@
 					</section>
 
 				<!-- About Me -->
-					<section id="about" class="three">
-						<div class="container">
 
-							<header>
-								<h2>About Me</h2>
-							</header>
-
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
-
-						</div>
-					</section>
 
 				<!-- Contact -->
 					<section id="contact" class="four">
