--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							-->
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
-								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href="#About" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
 								<li><a href="#Publication" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Publication</span></a></li>
 								<li><a href="#Teaching" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Teaching</span></a></li>
 								<li><a href="#Link" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Link</span></a></li>
@@ -79,8 +79,8 @@
 
 							<header>
 								<h2 class="alt">Welcome to <a href="http://www.math.mcgill.ca/farhad/"><strong>Farhad Shokoohi</strong>'s homepage</a> <br /></h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<p>McGill University<br />
+								Department of Mathematics and Statistics</p>
 							</header>
 
 							<footer>
