--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 							-->
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
-								<li><a href="#About" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
-								<li><a href="#Publication" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Publication</span></a></li>
-								<li><a href="#Teaching" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Teaching</span></a></li>
-								<li><a href="#Link" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Link</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href="#publication" id="publication-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Publication</span></a></li>
+								<li><a href="#teaching" id="teaching-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Teaching</span></a></li>
+								<li><a href="#link" id="link-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Link</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -59,7 +59,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://twitter.com/fshokoohi" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
