--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Welcome to <a href="http://www.math.mcgill.ca/farhad/"><strong>Farhad Shokoohi</strong>'s homepage</a> <br /></h2>
+								<h2 class="alt">Welcome to <br /> 
+								<a href="http://www.math.mcgill.ca/farhad/"><strong>Farhad Shokoohi</strong>'s homepage</a> <br /></h2>
 								<p>McGill University<br />
 								Department of Mathematics and Statistics</p>
 							</header>
