--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
 								<li><a href="#publication" id="publication-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Publication</span></a></li>
 								<li><a href="#teaching" id="teaching-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Teaching</span></a></li>
-								<li><a href="#link" id="link-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Link</span></a></li>
+								<li><a href="#links" id="link-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Links</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -59,9 +59,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
+							<li><a href="https://ca.linkedin.com/pub/farhad-shokoohi/2b/121/206" class="icon fa-linkedin"><span class="label">Linkein</span></a></li>
 							<li><a href="https://twitter.com/fshokoohi" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.facebook.com/shokoohi.farhad" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
