--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://ca.linkedin.com/pub/farhad-shokoohi/2b/121/206" class="icon fa-linkedin"><span class="label">Linkein</span></a></li>
+							<li><a href="https://ca.linkedin.com/pub/farhad-shokoohi/2b/121/206" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://twitter.com/fshokoohi" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/shokoohi.farhad" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.researchgate.net/profile/Farhad_Shokoohi2" class="icon fa-researchgate"><span class="label">Researchgate</span></a></li>
+							<li><a href="mailto:farhad@math.mcgill.ca" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -78,7 +78,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Welcome to <br /> 
+								<h2 class="alt">Welcome to <br> 
 								<a href="http://www.math.mcgill.ca/farhad/"><strong>Farhad Shokoohi</strong>'s homepage</a> <br /></h2>
 								<p>McGill University<br />
 								Department of Mathematics and Statistics</p>
