--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					</section>
 					
 					<!-- Portfolio -->
-					<section id="Publication" class="two">
+					<section id="Publications" class="two">
 						<div class="container">
 
 							<header>
