--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							</header>
 
 							<footer>
-								<a href="#About" class="button scrolly">About Me</a>
+								<a href="#about" class="button scrolly">About Me</a>
 							</footer>
 
 						</div>
