--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
 								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
-								<li><a href="#publication" id="publication-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Publication</span></a></li>
+								<li><a href="#publications" id="publications-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Publications</span></a></li>
 								<li><a href="#teaching" id="teaching-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Teaching</span></a></li>
 								<li><a href="#links" id="link-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Links</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
@@ -86,7 +86,7 @@
 							</header>
 
 							<footer>
-								<a href="#about" class="button scrolly">About Me</a>
+								<a href="#contact" class="button scrolly">Contact</a>
 							</footer>
 
 						</div>
@@ -112,11 +112,11 @@
 					</section>
 					
 					<!-- Portfolio -->
-					<section id="Publications" class="two">
+					<section id="publications" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Publication</h2>
+								<h2>Publications</h2>
 							</header>
 
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
