--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<li><a href="#publications" id="publications-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Publications</span></a></li>
 								<li><a href="#teaching" id="teaching-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Teaching</span></a></li>
 								<li><a href="#links" id="link-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Links</span></a></li>
-								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
+								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact Me</span></a></li>
 							</ul>
 						</nav>
 
@@ -86,7 +86,7 @@
 							</header>
 
 							<footer>
-								<a href="#contact" class="button scrolly">Contact</a>
+								<a href="#contact" class="button scrolly">Contact Me</a>
 							</footer>
 
 						</div>
