--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Contact Me</h2>
 							</header>
 
 							<p>Elementum sem parturient nulla quam placerat viverra
