--- a/index.html
+++ b/index.html
@@ -101,12 +101,15 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>
+							<h2>Farhad Shokoohi</h2>
+                    					is a postdoctoral fellow at <a href="http://www.math.mcgill.ca">Department of Mathematics and Statistics</a> at 
+                    					<a href="http://www.mcgill.ca">McGill University</a>. His main research interests are 
+                    					Epigenetics, High Dimensional Problems, Mixture Models, Survival Analysis, Metagenomics, Bayesian Analysis, Computational Statistics, Small Area Estimation, Nonparametric Statistics and Data Mining. 
+                    					He was a postdoctoral fellow at <a href="http://www.math.mcgill.ca/">McGill University</a> and <a href="http://umanitoba.ca">University of Manitoba</a>,  visiting scholar at <a href="https://www.osu.edu/">The Ohio State University</a>, and received his Ph.D. in Statistics from 
+                    					<a href="http://en.sbu.ac.ir/sitepages/home.aspx">Shahid Beheshti University</a>.<br>
+                    					His hobbies include science, technology, data analysis, traditonal persian music, persian poems, computing, etc.<br>
+							</p>
 
 						</div>
 					</section>
