--- a/index.html
+++ b/index.html
@@ -125,12 +125,15 @@
 							
         <div class="section">
             <div class="container">
-            <h3 Refereed Publications</h3>
-              <li <a href="http://onlinelibrary.wiley.com/doi/10.1002/cjs.11236/abstract">Torabi, M. and Shokoohi, F. (2015)</a> Non-parametric generalized linear mixed models in small area estimation, Canadian Journal of Statistics, DOI: 10.1002/cjs.11236.</i></li>
+            <h3></h3> Refereed Publications</h3>
+            <body>
+
+              <li></li> <a href="http://onlinelibrary.wiley.com/doi/10.1002/cjs.11236/abstract">Torabi, M. and Shokoohi, F. (2015)</a> Non-parametric generalized linear mixed models in small area estimation, Canadian Journal of Statistics, DOI: 10.1002/cjs.11236.</i></li>
               <li><a href="http://www.tandfonline.com/doi/pdf/10.1080/00949655.2012.721365">Torabi, M. and Shokoohi, F. (2014)</a> Hierarchical Bayes Estimation in Small Area Estimation Using Cross-Sectional and Time-Series Data, Journal of Statistical Computation and Simulation, 84, 605- 613. .</i></li>
               <li><a href="jds-online.com/file_download/378/JDS-1098.pdf">Mahmoudvand R., Edalati, A. and Shokoohi, F. (2013)</a> Bonus-Malus System in Iran: An Empirical Evaluation, Journal of Data Science, 11, 29-41 .</i></li>
               <li><a href="http://www.sciencedirect.com/science/article/pii/S0047259X1200142X">Torabi, M. and Shokoohi, F. (2012)</a> Likelihood Inference in Small Area Estimation by Combining Time-Series and Cross-Sectional Data, Journal of Multivariate Analysis, 111, 213-221. .</i></li>
-            </div>
+           </body>
+ </div>
         </div>
 
 <br>
