--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 						</div>
 					</section>
 
+
+				<!-- About Me -->
+
 					<section id="about" class="three">
 						<div class="container">
 
@@ -194,6 +197,21 @@ by combing time series and cross-sectional data.</i></li>
 
 					</section>
 					
+					<!-- Teaching -->
+					<section id="teaching" class="two">
+						<div class="container">
+
+							<header>
+								<h2>Teaching</h2>
+							</header>
+
+							<p>I have been teaching many statistical and software course since bacehor program.</p>
+
+
+						</div>
+					</section>
+
+					
 					<!-- Publications -->
 					<section id="publications" class="two">
 						<div class="container">
@@ -255,7 +273,6 @@ by combing time series and cross-sectional data.</i></li>
 						</div>
 					</section>
 
-				<!-- About Me -->
 
 
 				<!-- Contact -->
