--- a/index.html
+++ b/index.html
@@ -212,18 +212,15 @@ by combing time series and cross-sectional data.</i></li>
 					</section>
 
 					
-					<!-- Publications -->
-					<section id="publications" class="two">
+					<!-- Links -->
+					<section id="links" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Publications</h2>
+								<h2>Links</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Following links are usefull.</p>
 
 							<div class="row">
 								<div class="4u 12u$(mobile)">
