--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ by combing time series and cross-sectional data.</i></li>
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li> id="copyright">Copyright &copy; 2015 McGill University, <a href="http://math.mcgill.ca/farhad">Farhad Shokoohi</a> </li>
+						<li> Copyright &copy; 2015 McGill University, <a href="http://math.mcgill.ca/farhad">Farhad Shokoohi</a> </li>
 					</ul>
 
 			</div>
