--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<header>
 								<h2 class="alt">Welcome to <br> 
 								<a href="http://www.math.mcgill.ca/farhad/"><strong>Farhad Shokoohi</strong>'s homepage</a> <br /></h2>
-								<p>McGill University<br />
+								<p>McGill University <br />
 								Department of Mathematics and Statistics</p>
 							</header>
 
@@ -128,7 +128,7 @@
 							
         <div class="section">
             <div class="container">
-            <h3> Refereed Publications</h3>
+            <h3><span style="color:yellow">Refereed Publications</span></h3>
               <li><a href="http://onlinelibrary.wiley.com/doi/10.1002/cjs.11236/abstract">Torabi, M. and <b>Shokoohi, F.</b> (2015)</a> Non-parametric generalized linear mixed models in small area estimation, Canadian Journal of Statistics, DOI: 10.1002/cjs.11236.</i></li>
               <li><a href="http://www.tandfonline.com/doi/pdf/10.1080/00949655.2012.721365">Torabi, M. and Shokoohi, F. (2014)</a> Hierarchical Bayes Estimation in Small Area Estimation Using Cross-Sectional and Time-Series Data, Journal of Statistical Computation and Simulation, 84, 605- 613.</i></li>
               <li><a href="jds-online.com/file_download/378/JDS-1098.pdf">Mahmoudvand R., Edalati, A. and Shokoohi, F. (2013)</a> Bonus-Malus System in Iran: An Empirical Evaluation, Journal of Data Science, 11, 29-41 .</i></li>
