--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <div class="section">
             <div class="container">
-              <h3>Submitted</h3>
+              <h3><span style="color:red">Submitted</span></h3>
               <li>Shokoohi, F. and Torabi, M. Likelihood-based non-parametric inference in small area estimation
 by combing time series and cross-sectional data.</i></li>
               <li>Shokoohi, F. and Torabi, M. Hierarchical Bayes Inference in Small Area Estimation using Penalized Spline Regression by Combining Time Series and Cross-sectional Data.</i></li>
@@ -152,7 +152,7 @@ by combing time series and cross-sectional data.</i></li>
 
         <div class="section">
             <div class="container">
-            <h3>Technical Reports</h3>
+            <h3><span style="color:red">Technical Reports</span></h3>
               <li>Shokoohi, F. (2011) Bonus-Malus System for Automobile Third Party Liability Insurance in Other Countries and Suggesting a Suitable System for Iran, Insurance Research Centre, Affiliated to the Central Insurance of Iran.</i></li>
             </div>
         </div>
@@ -161,7 +161,7 @@ by combing time series and cross-sectional data.</i></li>
 
         <div class="section">
             <div class="container">
-            <h3>Invited Talks</h3>
+            <h3><span style="color:red">Invited Talks</span></h3>
               <li>Stephens, D.A., Shokoohi, F. and Labbe, A. (2016) A Novel Hidden Markov Model approach to analyze sequencing-based DNA methylation data, 44th Annual Meeting of the Statistical Society of Canada. will be Held May 29 - June 1, 2016 at Brock University, St. Catharines ON, Canada.</i></li>
               <li><a href="http://www.amstat.org/meetings/jsm/2013/onlineprogram/AbstractDetails.cfm?abstractid=307865">Torabi, M and Shokoohi, F. (2013)</a> Non-parametric Small Area Estimation, the JSM 2013. Mon- treal, QC, Canada.</i></li>
               <li><a href="http://www.amar.org.ir/Default.aspx?tabid=133">Shokoohi, F. (2007)</a> Bayesian Inference in Generalized Poisson Distribution, Central Insurance of Iran 1st Statistics and Mathematics Student Conference, Razi University, Kermanshah, Iran.</i></li>
@@ -171,7 +171,7 @@ by combing time series and cross-sectional data.</i></li>
 <br>
         <div class="section">
             <div class="container">
-            <h3>Departamental Talks</h3>
+            <h3><span style="color:red">Departamental Talks</span></h3>
               <li>Shokoohi, F. (2014) Variable Selection in mixture models with observations subject to right cen- soring, March. 27, 2014, Department of Mathematics, University of Sherbrooke, Sherbrooke, QC, Canada.</i></li>
               <li>Shokoohi, F. (2013) Some Recent Developments in Likelihood-Based Small Area Estimation, Oct. 4, 2013, Department of Mathematics and Statistics, McGill University, Montreal, QC, Canada.</i></li>
               <li>Shokoohi, F. (2013). Likelihood Inference in Small Area Estimation by Combining Time Series and Cross-Sectional Data, Department of Statistics, University of Manitoba. March 21, 2013.</i></li>
@@ -183,7 +183,7 @@ by combing time series and cross-sectional data.</i></li>
 <br>
         <div class="section">
             <div class="container">
-            <h3>Contributed Talks</h3>
+            <h3><span style="color:red">Contributed Talks</span></h3>
               <li>Shokoohi, F., Labbe, A., and Stephens, D.A. (2015). DNA methylation Analysis; A thorough comparison of available analytic tools, 43rd Annual Meeting of the Statistical Society of Canada. Held June 14-17, 2015 at Dalhousie University, Halifax, NS, Canada.</i></li>
               <li>Shokoohi, F., Asgharian, M., Khalili, A. and Lin, S. (2013). Variable Selection in Mixture of Survival Models, 42nd Annual Meeting of the Statistical Society of Canada. Held May 25-28, 2013, University of Toronto, Toronto, ON, Canada.</i></li>
               <li>Shokoohi, F. (2013). Likelihood Inference in Small Area Estimation Using P-Spline and Time Series Models, JSM 2013. Held August 3-8, 2013, at the Palais des congr ́es de Montreal, Montreal, QC, Canada.</i></li>
