--- a/index.html
+++ b/index.html
@@ -196,6 +196,22 @@
 
 </div>
 </section>
+
+				<!-- Teaching -->
+
+					<section id="teaching" class="three">
+						<div class="container">
+
+							<header>
+								<h2>Teaching</h2>
+							</header>
+							
+							<p>I have been teaching many statistical and software course since bacehor program.</p>
+
+
+
+						</div>
+					</section>
 					
 					<!-- Teaching -->
 					<section id="teaching" class="two">
