--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li> Copyright &copy; 2015 <a href="http://math.mcgill.ca/farhad">Farhad Shokoohi</a> </li>
+						<li> Copyright &copy; 2015 <a href="http://www.math.mcgill.ca/farhad">Farhad Shokoohi</a> </li>
 					</ul>
 
 			</div>
