--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
 							<p>You can send me email usigng following form.</p>
 
-							<form method="post" action="mailto:farhad@math.mcgill.ca">
+							<form method="post" action="#mailto:farhd@math.mcgill.ca">
 								<div class="row">
 									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
