--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
 							</header>
 							
 							<p>I have been teaching many statistical and software course since bacehor program.</p>
-
-							<h2><I>Undergraduate</I></h2>
+        			<div class="section">
+            				<div class="container">
+            				<h3><span style="color:red">Undergraduate</span></h3>
 							<h3> <U>At McGill University</U></h3>
 							<li> MATH 112 (Fundamental of Mathematics)</li>
 							<br>
@@ -241,6 +242,8 @@
 							<br>
 							<br>
 							
+					</div>
+					</div>
 							<h2> <I>Graduate</I></h2>
 							<h3> <U>At Razi University</U></h3>
 							<li>Statistical Analysis Using SAS (No credit)</li>
