--- a/index.html
+++ b/index.html
@@ -335,7 +335,18 @@
 							<header>
 								<h2>Contact Me</h2>
 							</header>
-
+							<div class="container">
+								<h1> Contact Information</h1>
+								<h3> Farhad Shokoohi </h3> 
+									<b> Email: </b> farhad at-sign math d0t mcgill d0t ca 
+									<br>
+									<b> Address: </b> <br>
+									1248 Burnside Hall, Department of Mathematics and Statistics, <br>
+									McGill University, <br>
+									805 Sherbrooke Street West, <br>
+									Montreal, QC, H3A 0B9, <br>
+									Canada <br>
+									<b> TEL: </b> +1 (514) 398-2998 <br>
 							<p>You can send me email usigng following form.</p>
 
 							<form method="post" action="#mailto:farhd@math.mcgill.ca">
