--- a/index.html
+++ b/index.html
@@ -279,6 +279,17 @@
 							</header>
 
 							<p>Following links are usefull.</p>
+							
+							<li> My LinkedIn Profile [<a href="https://ca.linkedin.com/pub/farhad-shokoohi/2b/121/206/" target=_blank>link</a>]</li>
+							<li> Masoud Asgharian [<a href="http://www.math.mcgill.ca/biblio/author/Asgharian" target=_blank>link</a>]</li>
+							<li> Abbas Khalili [<a href="http://www.math.mcgill.ca/khalili/" target=_blank>link</a>]</li>
+							<li> David Stephens [<a href="http://www.math.mcgill.ca/~dstephens/" target=_blank>link</a>]</li>
+							<li> Aurelie Labbe [<a href="http://www.medicine.mcgill.ca/epidemiology/Labbe/" target=_blank>link</a>]</li>
+							<li> McGill's Department of Mathematics and Statistics [<a href="http://www.math.mcgill.ca/" target=_blank>link</a>]</li>
+							<li> McGill's Statistics Seminar [<a href="http://www.math.mcgill.ca/node/5358" target=_blank>link</a>]</li>
+							<li> Shahid Beheshti Universtiy [<a href="http://en.sbu.ac.ir/sitepages/home.aspx" target=_blank>link</a>]</li>
+							<li> The Statistical Society of Canada [<a href="http://www.ssc.ca/" target=_blank>link</a>]</li>
+							<li> The Iranian Statistical Society [<a href="http://www.irstat.ir/" target=_blank>link</a>]</li>
 
 							<div class="row">
 								<div class="4u 12u$(mobile)">
