--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
 							<li> Professor Abbas Khalili [<a href="http://www.math.mcgill.ca/khalili/" target=_blank>link</a>]</li>
 							<li> Professor David Stephens [<a href="http://www.math.mcgill.ca/~dstephens/" target=_blank>link</a>]</li>
 							<li> Professor Aurelie Labbe [<a href="http://www.medicine.mcgill.ca/epidemiology/Labbe/" target=_blank>link</a>]</li>
+							<li> Professor Shili Lin [<a href="http://www.stat.osu.edu/~shili/" target=_blank>link</a>]</li>
 							<li> McGill's Department of Mathematics and Statistics [<a href="http://www.math.mcgill.ca/" target=_blank>link</a>]</li>
 							<li> McGill's Statistics Seminar [<a href="http://www.math.mcgill.ca/node/5358" target=_blank>link</a>]</li>
 							<li> Shahid Beheshti Universtiy [<a href="http://en.sbu.ac.ir/sitepages/home.aspx" target=_blank>link</a>]</li>
