--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/avatar.jpg" alt="" /></a>
 
 							<p>
 							<h2>Farhad Shokoohi</h2>
