--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
 							<header>
 								<h2 class="alt">Welcome to <br> 
 								<a href="http://www.math.mcgill.ca/farhad/"><strong>Farhad Shokoohi</strong>'s homepage</a> <br /></h2>
-								<p>McGill University <br />
-								Department of Mathematics and Statistics</p>
+								<p>
+									Ph.D. in Statistics<br />
+									McGill University <br />
+									Department of Mathematics and Statistics
+									</p>
 							</header>
 
 							<footer>
