--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div id="main">
 
 				<!-- Intro -->
-					<section id="top" class="image avatar100"><img src="images/avatar.jpg">
+					<section id="top" class="images/avatar.jpg">
 						<div class="container">
 
 							<header>
